k8s/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: tools
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak.local
    http:
      paths:              
      - backend:
          service:
            name: keycloak
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
