k8s/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: trino
spec:
  ingressClassName: nginx
  rules:
  - host: minio.local
    http:
      paths:              
      - backend:
          service:
            name: my-minio
            port:
              number: 9001
        path: /
        pathType: ImplementationSpecific
