k8s/trino-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino-ingress
  namespace: trino
spec:
  ingressClassName: nginx
  rules:
  - host: trino.local
    http:
      paths:              
      - backend:
          service:
            name: my-trino
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
